# moto3D

./: CMakeLists.txt  camera.cpp  main.cpp  navigationcontrols.cpp  object.cpp  object.h  pointlight.cpp  pointlight.h  renderer.cpp  shader.cpp  shader.h  texture.h
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
